crates/vize_patina/src/rules/script/component_options_name_casing/snapshots/vize_patina__rules__script__component_options_name_casing__tests__invalid_kebab_case_name.snap
---
source: crates/vize_patina/src/rules/script/component_options_name_casing/tests.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/component-options-name-casing",
        severity: Error,
        message: "Component name 'my-component' is not PascalCase.",
        start: 26,
        end: 40,
        help: Some(
            "Vue's style guide recommends PascalCase for component names; rename this to PascalCase (e.g. `MyComponent`).",
        ),
        labels: [
            Label {
                message: "expected PascalCase",
                start: 26,
                end: 40,
            },
        ],
        fix: None,
    },
]
